puppet/parser/example/error/github/raw.githubusercontent.com/wcpro/Scaffeine/89f58fd51097a098c1dacce13400df5091de006f/src/Scaffeine.Offers.Manager/content/Views/Offers/_History.cshtml.pp
<h2>Lead Information</h2>